# mindex

./: .gitignore  README.md  eval.json  main.ipynb  pyproject.toml  requirements.txt  setup.py  urls.txt
data/: benchmark_results.md  claude_prompt.txt  eval.json
mindex/: __init__.py  bm25.py  chunking_regex.py  cli.py  evaluator.py  main.ipynb  mindex.py
mindex/vector_store/: __init__.py  storage.py
tests/: test_mindex.py
vector_store/: storage.py
